# contracts/openapi.json
@@ -1785,6 +1785,38 @@
             ],
             "title": "Due"
           },
+          "condition": {
+            "anyOf": [
+              {
+                "type": "string",
+                "maxLength": 2000
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Condition"
+          },
+          "value": {
+            "anyOf": [
+              {
+                "type": "string",
+                "maxLength": 200
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Value"
+          },
+          "resolved_issues": {
+            "items": {
+              "type": "string"
+            },
+            "type": "array",
+            "maxItems": 30,
+            "title": "Resolved Issues"
+          },
           "reason": {
             "type": "string",
             "maxLength": 1000,
